--- a/website/resale_app/templates/resale_app/base.html
+++ b/website/resale_app/templates/resale_app/base.html
@@ -1,20 +1,28 @@
-<!DOCTYPE html>
-
-{% load static %}
+<!DOCTYPE html> {% load static %}
 
 <html>
-    <head>
-        <title>My Project</title>
-        <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{% static 'resale_app/style.css' %}">
-    </head>
-    {% include "resale_app/header.html" %}
-    <body>
-        <div class="container">
-            {% block content %}{% endblock content %}
-            {% block footer %} {% endblock footer %}
-        </div>
-    </body>
-    {% include "resale_app/footer.html" %}
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Project</title>
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'resale_app/style.css' %}">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+</head>
+{% include "resale_app/header.html" %}
+
+<body>
+
+    <div class="container">
+        {% block content %}{% endblock content %}
+    </div>
+</body>
+{% include "resale_app/footer.html" %}
+
 </html>
