--- a/website/resale_app/templates/resale_app/header.html
+++ b/website/resale_app/templates/resale_app/header.html
@@ -2,13 +2,13 @@
     <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Resale</a>
+                <a class="navbar-brand" href="{% url 'search_page' %}">Resale</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="#">Home</a>
+                        <a class="nav-item nav-link active" href="{% url 'search_page' %}">Home</a>
                         <a class="nav-item nav-link" href="#">About</a>
                         <a class="nav-item nav-link disabled" href="#">Patreon</a>
                     </div>
