--- a/website/resale_app/templates/resale_app/search_result.html
+++ b/website/resale_app/templates/resale_app/search_result.html
@@ -35,11 +35,13 @@
 
 <canvas id="myChart" width="100" height="20"></canvas>
 
+<hr>
+
+<a href="{% url 'search_page' %}"><button class="btn btn-dark btn-lg mt-2 mb-5 next">New Search</button></a>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js"
   integrity="sha512-GMGzUEevhWh8Tc/njS0bDpwgxdCJLQBWG3Z2Ct+JGOpVnEmjvNx6ts4v6A2XJf1HOrtOsfhv3hBKpK9kE5z8AQ=="
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-<a href="{% url 'search_page' %}"><button class="btn btn-dark btn-lg mt-2 next">New Search</button></a>
 
 <script>
   const ctx = document.getElementById('myChart').getContext('2d');
