--- a/website/resale_app/templates/resale_app/header.html
+++ b/website/resale_app/templates/resale_app/header.html
@@ -2,7 +2,7 @@
     <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'search_page' %}">Resale</a>
+                <a class="navbar-brand" href="{% url 'search_page' %}">ThredCheck</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
