--- a/website/resale_app/templates/resale_app/footer.html
+++ b/website/resale_app/templates/resale_app/footer.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-6">
                 <h6>About</h6>
-                <p class="text-justify">Resale.com is an initiative to help people get the most for their previously loved items. Using real-time data from the web, Resale will help you get the most for your items</p>
+                <p class="text-justify">Thredcheck.com is an initiative to help people get the most for their previously loved items. Using up-to-date data from the web, Thredcheck will help you get the most for your items</p>
             </div>
 
             <div class="col-xs-6 col-md-3">
@@ -36,18 +36,18 @@
         <div class="row">
             <div class="col-md-8 col-sm-6 col-xs-12">
                 <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by
-                    <a href="#">Resale</a>.
+                    <a href="#">Thredcheck</a>.
                 </p>
             </div>
 
-            <div class="col-md-4 col-sm-6 col-xs-12">
+            <!-- <div class="col-md-4 col-sm-6 col-xs-12">
                 <ul class="social-icons">
                     <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
                     <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
                     <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
                     <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </div>
 </footer>
