--- a/website/resale_app/static/resale_app/css/style.css
+++ b/website/resale_app/static/resale_app/css/style.css
@@ -1,288 +1,300 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html,
 body {
-    height: 100%;
-    background-color: #5463e6;
+  height: 100%;
+  background-color: #4151e2;
 }
 
 body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.content {
-    flex: 1 0 auto;
+body .content {
+  flex: 1 0 auto;
 }
 
 .header {
-    background-color: #080F5B;
+  background-color: #080f5b;
 }
 .site-footer {
-    background-color: #080F5B;
-    padding: 45px 0 20px;
-    font-size: 15px;
-    line-height: 24px;
-    color: #737373;
-    flex-shrink: 0;
-    margin-top: auto;
+  background-color: #080f5b;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+  flex-shrink: 0;
+  margin-top: auto;
 }
 
 .site-footer hr {
-    border-top-color: #bbb;
-    opacity: 0.5
+  border-top-color: #bbb;
+  opacity: 0.5;
 }
 
 .site-footer hr.small {
-    margin: 20px 0
+  margin: 20px 0;
 }
 
 .site-footer h6 {
-    color: #fff;
-    font-size: 16px;
-    text-transform: uppercase;
-    margin-top: 5px;
-    letter-spacing: 2px
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
 }
 
 .site-footer a {
-    color: #737373;
+  color: #737373;
 }
 
 .site-footer a:hover {
-    color: #3366cc;
-    text-decoration: none;
+  color: #3366cc;
+  text-decoration: none;
 }
 
 .footer-links {
-    padding-left: 0;
-    list-style: none
+  padding-left: 0;
+  list-style: none;
 }
 
 .footer-links li {
-    display: block
+  display: block;
 }
 
 .footer-links a {
-    color: #737373
+  color: #737373;
 }
 
 .footer-links a:active,
 .footer-links a:focus,
 .footer-links a:hover {
-    color: #3366cc;
-    text-decoration: none;
+  color: #3366cc;
+  text-decoration: none;
 }
 
 .footer-links.inline li {
-    display: inline-block
+  display: inline-block;
 }
 
 .site-footer .social-icons {
-    text-align: right
+  text-align: right;
 }
 
 .site-footer .social-icons a {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    margin-left: 6px;
-    margin-right: 0;
-    border-radius: 100%;
-    background-color: #33353d
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
 }
 
 .copyright-text {
-    margin: 0
+  margin: 0;
 }
 
-@media (max-width:991px) {
-    .site-footer [class^=col-] {
-        margin-bottom: 30px
-    }
+@media (max-width: 991px) {
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
+  }
 }
 
-@media (max-width:767px) {
-    .site-footer {
-        padding-bottom: 0
-    }
-    .site-footer .copyright-text,
-    .site-footer .social-icons {
-        text-align: center
-    }
+@media (max-width: 767px) {
+  .site-footer {
+    padding-bottom: 0;
+  }
+  .site-footer .copyright-text,
+  .site-footer .social-icons {
+    text-align: center;
+  }
 }
 
 .social-icons {
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
 
 .social-icons li {
-    display: inline-block;
-    margin-bottom: 4px
+  display: inline-block;
+  margin-bottom: 4px;
 }
 
 .social-icons li.title {
-    margin-right: 15px;
-    text-transform: uppercase;
-    color: #96a2b2;
-    font-weight: 700;
-    font-size: 13px
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
 }
 
 .social-icons a {
-    background-color: #eceeef;
-    color: #818a91;
-    font-size: 16px;
-    display: inline-block;
-    line-height: 44px;
-    width: 44px;
-    height: 44px;
-    text-align: center;
-    margin-right: 8px;
-    border-radius: 100%;
-    -webkit-transition: all .2s linear;
-    -o-transition: all .2s linear;
-    transition: all .2s linear
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 
 .social-icons a:active,
 .social-icons a:focus,
 .social-icons a:hover {
-    color: #fff;
-    background-color: #29aafe
+  color: #fff;
+  background-color: #29aafe;
 }
 
 .social-icons.size-sm a {
-    line-height: 34px;
-    height: 34px;
-    width: 34px;
-    font-size: 14px
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
 }
 
 .social-icons a.facebook:hover {
-    background-color: #3b5998
+  background-color: #3b5998;
 }
 
 .social-icons a.twitter:hover {
-    background-color: #00aced
+  background-color: #00aced;
 }
 
 .social-icons a.linkedin:hover {
-    background-color: #007bb6
+  background-color: #007bb6;
 }
 
 .social-icons a.dribbble:hover {
-    background-color: #ea4c89
+  background-color: #ea4c89;
 }
 
-@media (max-width:767px) {
-    .social-icons li.title {
-        display: block;
-        margin-right: 0;
-        font-weight: 600
-    }
+@media (max-width: 767px) {
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
+  }
 }
-
 
 /* New Additions */
 .container {
-    padding-top: 60px;
-    padding-bottom: 60px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 #new_search {
-    display: None;
+  display: None;
 }
-
 
 /* Search Form  */
 fieldset {
-    padding: 20px;
+  padding: 20px;
 }
 
+.search-field {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.search_form {
+  box-shadow: 20px;
+}
 .search-button {
-    background-color: #080F5B;
+  background-color: #080f5b;
 }
 
 .search-results {
-    font-size: 30px;
-    color: white;
+  font-size: 20px;
+  color: white;
 }
+
 div .center {
-    text-align:center;
-    margin: 20px;
+  text-align: center;
+  margin: 20px;
 }
 .left-right-container {
-    padding: 45px;
-    background-color: #5463e6;
+  padding: 45px;
+  background-color: #4151e2;
 }
 
 /* Color Palette */
 .color-1 {
-    color: white;
+  color: white;
 }
 
 .color-2 {
-    color: #15Db95;
+  color: #15db95;
 }
 
 .color-3 {
-    color: #080F5B;
+  color: #080f5b;
 }
 
 .color-4 {
-    color: #F4E4C1;
+  color: #f4e4c1;
 }
 
 .color-5 {
-    color: #e48085;
+  color: #e48085;
 }
 
 /* Font palette */
 .font-thin {
-    font-family: 'Epilogue', sans-serif;
-    font-weight: 100;
+  font-family: "Epilogue", sans-serif;
+  font-weight: 100;
 }
 
 .font-light {
-    font-family: 'Epilogue', sans-serif;
-    font-weight: 300;
+  font-family: "Epilogue", sans-serif;
+  font-weight: 300;
 }
 
 .font-medium {
-    font-family: 'Epilogue', sans-serif;
-    font-weight: 500;
+  font-family: "Epilogue", sans-serif;
+  font-weight: 500;
 }
 
 .font-bold {
-    font-family: 'Epilogue', sans-serif;
-    font-weight: 800;
+  font-family: "Epilogue", sans-serif;
+  font-weight: 800;
 }
-
 
 /* Search results */
 table {
-    table-layout: fixed;
-    border-collapse: collapse;
-    width: 90%;
-  }
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 90%;
+}
 
-th, td {
-    padding: 15px;
+th,
+td {
+  padding: 10px;
 }
 .wide {
-    width: 70%;
-}   
-
-.center {
-    margin-left: auto;
-    margin-right: auto;
+  width: 70%;
 }
 
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.test {
+  background-color: white;
+}
+
+.text-shadow {
+    text-shadow: 2px 2px #080f5b;
+}
