--- a/website/resale_app/templates/resale_app/search_page.html
+++ b/website/resale_app/templates/resale_app/search_page.html
@@ -16,7 +16,7 @@
         <form id="search" action="./search_result/" method="post">
             {% csrf_token %}
             <fieldset>
-                <h3 class="color-1" style="text-align:center; margin-bottom: 30px; text-decoration: underline; text-decoration-color: hsl(159, 83%, 47%);">
+                <h3 class="color-1 text-decoration" style="text-align:center; margin-bottom: 30px;">
                     See how much your items could be worth</h3>
                 <select class="form-control form-control-lg search-field" id="brand_search" name="brand"
                     autocomplete="True">
