--- a/website/resale_app/templates/resale_app/search_result.html
+++ b/website/resale_app/templates/resale_app/search_result.html
@@ -1,90 +1,94 @@
 {% extends "resale_app/base.html" %} {% block content %}
 <!-- templates/search_results.html -->
 
-<div class="row justify-content-md-center m-5">
+<div class="row justify-content-md-center m-3">
   <div class="d-flex justify-content-center">
-    <h1 class="display-4 color-1">Here is how much {{garment_brand|title }} {{ garment_category|lower }} could be worth!</h1>
+    <h1 class="display-4 color-1">Here is how much {{garment_brand|title }} {{ garment_category|lower }} could be worth!
+    </h1>
   </div>
-</div>
 
-<h3 class="color-1" style="margin-bottom: 30px; text-decoration: underline; text-decoration-color: hsl(159, 83%, 47%);">
-  Summary: </h3>
-<div>
-  <table class="search-results">
-    <col span="1" class="wide">
-      <tr>
-        <td class="font-bold">Search results:</td>
-        <td><strong class="color-2">{{ total_results }}</strong></td>
-      </tr>
-      <tr>
-        <td class="font-bold">Average re-sell price:</td>
-        <td><strong class="color-2">{{ avg_sale_price}}</strong></td>
-      </tr>
-      <tr>
-        <td class="font-bold">Resell price range:</td>
-        <td><strong class="color-2">{{ range_sale_price }}</strong></td>
-      </tr>
-      <tr>
-        <td class="font-bold">Sellers usually reduce the price by:</td>
-        <td><strong class="color-2">{{ avg_list_price_reduction}}</strong></td>
-      </tr>
-      <tr>
-        <td class="font-bold">Eighty percent re-sell for at least: </td>
-        <td><strong class="color-2">{{ eighty_percent_category}}</strong></td>
-      </tr>
-  </table>
-</div>
+  <div class="col-sm-8">
+    <h3 class="color-1 text-decoration" style="margin-bottom: 30px;">
+      Summary: </h3>
+      <table class="search-results">
+        <col span="1" class="wide">
+        <tr>
+          <td class="font-bold">Search results:</td>
+          <td><strong class="color-2">{{ total_results }}</strong></td>
+        </tr>
+        <tr>
+          <td class="font-bold">Average re-sell price:</td>
+          <td><strong class="color-2">{{ avg_sale_price}}</strong></td>
+        </tr>
+        <tr>
+          <td class="font-bold">Resell price range:</td>
+          <td><strong class="color-2">{{ range_sale_price }}</strong></td>
+        </tr>
+        <tr>
+          <td class="font-bold">Sellers usually reduce the price by:</td>
+          <td><strong class="color-2">{{ avg_list_price_reduction}}</strong></td>
+        </tr>
+        <tr>
+          <td class="font-bold">Eighty percent re-sell for at least: </td>
+          <td><strong class="color-2">{{ eighty_percent_category}}</strong></td>
+        </tr>
+      </table>
+  </div>
 
 <!-- <canvas id="myChart" width="100" height="20"></canvas> -->
-
+<div class="col-sm-8">
 {% if keyword %}
 <hr>
-<h3 class="color-1" style="margin-bottom: 30px; text-decoration: underline; text-decoration-color: hsl(159, 83%, 47%);">
+<h3 class="color-1 text-decoration" style="margin-bottom: 30px;">
   Keyword "{{ keyword }}" search results: </h3>
 {% if keyword_data %}
 
 <div>
   <table class="search-results">
     <col span="1" class="wide">
-      <tr>
-        <td class="font-bold">Search results:</td>
-        <td><strong class="color-2">{{ keyword_total_results }}</strong></td>
-      </tr>
-      <tr>
-        <td class="font-bold">Average re-sell price:</td>
-        <td><strong class="color-2">{{ keyword_avg_sale_price}}</strong></td>
-      </tr>
-      <tr>
-        <td class="font-bold">Resell price range:</td>
-        <td><strong class="color-2">{{ keyword_range_sale_price }}</strong></td>
-      </tr>
+    <tr>
+      <td class="font-bold">Search results:</td>
+      <td><strong class="color-2">{{ keyword_total_results }}</strong></td>
+    </tr>
+    <tr>
+      <td class="font-bold">Average re-sell price:</td>
+      <td><strong class="color-2">{{ keyword_avg_sale_price}}</strong></td>
+    </tr>
+    <tr>
+      <td class="font-bold">Resell price range:</td>
+      <td><strong class="color-2">{{ keyword_range_sale_price }}</strong></td>
+    </tr>
   </table>
 </div>
 
 
 <div>
   <br>
-  <h3 class="color-1" style="margin-bottom: 30px; text-decoration: underline; text-decoration-color: hsl(159, 83%, 47%);">
+  <h3 class="color-1 text-decoration" style="margin-bottom: 30px;">
     Recently sold "{{ keyword }}" items: </h3>
   <ul>
-  {% for item in keyword_data %}
-  <li class="search-results font-light">{{ item.name|title }} recently sold for <strong>${{ item.sale_price }}</strong></p>  </li>
-  {% endfor %}
+    {% for item in keyword_data %}
+    <li class="search-results font-light"><a href="{{ item.link }}" target="_blank">{{ item.name|title }}</a> recently sold for <strong>${{ item.sale_price }}</strong></p>
+    </li>
+    {% endfor %}
   </ul>
 </div>
 
 {% else %}
-<p class="search-results font-light">No search results found for "{{ keyword }}"</p>
+<p class="search-results font-bold">No search results found for "{{ keyword }}"</p>
 {% endif %}
 {% endif %}
-<a href="{% url 'search_page' %}"><button class="btn btn-dark btn-lg mt-2 mb-5 next">New Search</button></a>
 
+<a href="{% url 'search_page' %}"><button class="btn btn-dark btn-lg mt-2 mb-5 new-search">New Search</button></a>
+
+</div>
+</div>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js"
   integrity="sha512-GMGzUEevhWh8Tc/njS0bDpwgxdCJLQBWG3Z2Ct+JGOpVnEmjvNx6ts4v6A2XJf1HOrtOsfhv3hBKpK9kE5z8AQ=="
   crossorigin="anonymous" referrerpolicy="no-referrer">
-</script>
+  </script>
 
 <script>
   const ctx = document.getElementById('myChart').getContext('2d');
