Updated search_result html

--- a/website/resale_app/templates/resale_app/search_result.html
+++ b/website/resale_app/templates/resale_app/search_result.html
@@ -8,8 +8,7 @@
   </div>
 
   <div class="col-sm-8">
-    <h3 class="color-1 text-decoration" style="margin-bottom: 30px;">
-      Summary: </h3>
+    <h3 class="color-1 text-decoration" style="margin-bottom: 30px;">Summary: </h3>
       <table class="search-results">
         <col span="1" class="wide">
         <tr>
@@ -35,7 +34,6 @@
       </table>
   </div>
 
-<!-- <canvas id="myChart" width="100" height="20"></canvas> -->
 <div class="col-sm-8">
 {% if keyword %}
 <hr>
